fix: toEnv: skip non k/v maps in lists
silently skip over entries in lists that aren't key/value maps

--- a/tests/values.yaml
+++ b/tests/values.yaml
@@ -179,6 +179,11 @@ edgeCases:
         - anyListEntry1: ignore
         - anyListEntry2: ignore
         - anyListEntry3: ignore
+    - "invalid non-key/value entry should be ignored"
+    - false
+    -
+      - "invalid list of lists"
+      - "invalid list of lists"
 
   innerTargets:
     outer:
