--- a/tests/unit/sscase_test.yaml
+++ b/tests/unit/sscase_test.yaml
@@ -11,83 +11,83 @@ tests:
   - it: "SSCase - camelCase"
     asserts:
       - equal:
-          path: env[0].value
+          path: env[?(@.name=="camelCase")].value
           value: "CAMEL_CASE"
 
   - it: "SSCase - camel_Snake_Case"
     asserts:
       - equal:
-          path: env[1].value
+          path: env[?(@.name=="camel_Snake_Case")].value
           value: "CAMEL_SNAKE_CASE"
 
   - it: "SSCase - camel.snake.dot"
     asserts:
       - equal:
-          path: env[2].value
+          path: env[?(@.name=="camel.snake.dot")].value
           value: "CAMEL_SNAKE_DOT"
 
   - it: "SSCase - snake_case"
     asserts:
       - equal:
-          path: env[3].value
+          path: env[?(@.name=="snake_case")].value
           value: "SNAKE_CASE"
 
   - it: "SSCase - kebab-case"
     asserts:
       - equal:
-          path: env[4].value
+          path: env[?(@.name=="kebab-case")].value
           value: "KEBAB_CASE"
 
   - it: "SSCase - SCREAMING-KEBAB-CASE"
     asserts:
       - equal:
-          path: env[5].value
+          path: env[?(@.name=="SCREAMING-KEBAB-CASE")].value
           value: "SCREAMING_KEBAB_CASE"
 
   - it: "SSCase - PascalCase"
     asserts:
       - equal:
-          path: env[6].value
+          path: env[?(@.name=="PascalCase")].value
           value: "PASCAL_CASE"
 
   - it: "SSCase - Train-Case"
     asserts:
       - equal:
-          path: env[7].value
+          path: env[?(@.name=="Train-Case")].value
           value: "TRAIN_CASE"
 
   - it: "SSCase - MixedCASEValue"
     asserts:
       - equal:
-          path: env[8].value
+          path: env[?(@.name=="MixedCASEValue")].value
           value: "MIXED_CASE_VALUE"
 
   - it: "SSCase - non,.;alnum$!)*in%(+=@key&name"
     asserts:
       - equal:
-          path: env[9].value
+          path: env[?(@.name=="non,.;alnum$!)*in%(+=@key&name")].value
           value: "NON_ALNUM_IN_KEY_NAME"
 
   - it: "SSCase - $delimitersBeginEnd_"
     asserts:
       - equal:
-          path: env[10].value
+          path: env[?(@.name=="$delimitersBeginEnd_")].value
           value: "DELIMITERS_BEGIN_END"
 
   - it: "SSCase - mMiXeD123"
     asserts:
       - equal:
-          path: env[11].value
+          path: env[?(@.name=="mMiXeD123")].value
           value: "MI_XE_D123_NOT_SUPPORTED"
 
   - it: "SSCase - spOngeBoB_CaSe"
     asserts:
       - equal:
-          path: env[12].value
+          path: env[?(@.name=="spOngeBoB_CaSe")].value
           value: "SP_ONGE_BO_B_CASE_NOT_SUPPORTED"
 
   - it: "SSCase - spOngeBoB-KeBaB-CaSe"
     asserts:
       - equal:
-          path: env[13].value
+          path: env[?(@.name=="spOngeBoB-KeBaB-CaSe")].value
           value: "SP_ONGE_BO_B_KE_BA_B_CASE_NOT_SUPPORTED"
