Revert "fix: improper quoting of non-string scalars"
This reverts commit 87e481a4b6956b7c8b31b3e26cb80896aa857990.

Unquoting non-strings was a bad call, reverting

--- a/tests/unit/toenv_test.yaml
+++ b/tests/unit/toenv_test.yaml
@@ -51,12 +51,12 @@ tests:
           path: envs.simple-map[?(@.name=="BOOL_VALUE")]
           value:
             name: BOOL_VALUE
-            value: false
+            value: "false"
       - equal:
           path: envs.simple-map[?(@.name=="NUMBER_VALUE")]
           value:
             name: NUMBER_VALUE
-            value: 42
+            value: "42"
       - equal:
           path: envs.simple-map[?(@.name=="LOG_LEVEL")]
           value:
@@ -66,12 +66,12 @@ tests:
           path: envs.simple-map[?(@.name=="REPLICAS")]
           value:
             name: REPLICAS
-            value: 3
+            value: "3"
       - equal:
           path: envs.simple-map[?(@.name=="USE_CACHE")]
           value:
             name: USE_CACHE
-            value: true
+            value: "true"
 
   - it: simple-map-name-implicit should prefix all keys from .Values.simpleMap with SIMPLE_MAP
     asserts:
@@ -92,12 +92,12 @@ tests:
           path: envs.simple-map-name-implicit[?(@.name=="SIMPLE_MAP_BOOL_VALUE")]
           value:
             name: SIMPLE_MAP_BOOL_VALUE
-            value: false
+            value: "false"
       - equal:
           path: envs.simple-map-name-implicit[?(@.name=="SIMPLE_MAP_NUMBER_VALUE")]
           value:
             name: SIMPLE_MAP_NUMBER_VALUE
-            value: 42
+            value: "42"
       - equal:
           path: envs.simple-map-name-implicit[?(@.name=="SIMPLE_MAP_LOG_LEVEL")]
           value:
@@ -107,12 +107,12 @@ tests:
           path: envs.simple-map-name-implicit[?(@.name=="SIMPLE_MAP_REPLICAS")]
           value:
             name: SIMPLE_MAP_REPLICAS
-            value: 3
+            value: "3"
       - equal:
           path: envs.simple-map-name-implicit[?(@.name=="SIMPLE_MAP_USE_CACHE")]
           value:
             name: SIMPLE_MAP_USE_CACHE
-            value: true
+            value: "true"
 
   - it: simple-map-name-explicit should prefix all keys from .Values.simpleMap with CUSTOM_PREFIX
     asserts:
@@ -133,12 +133,12 @@ tests:
           path: envs.simple-map-name-explicit[?(@.name=="CUSTOM_PREFIX_BOOL_VALUE")]
           value:
             name: CUSTOM_PREFIX_BOOL_VALUE
-            value: false
+            value: "false"
       - equal:
           path: envs.simple-map-name-explicit[?(@.name=="CUSTOM_PREFIX_NUMBER_VALUE")]
           value:
             name: CUSTOM_PREFIX_NUMBER_VALUE
-            value: 42
+            value: "42"
       - equal:
           path: envs.simple-map-name-explicit[?(@.name=="CUSTOM_PREFIX_LOG_LEVEL")]
           value:
@@ -148,12 +148,12 @@ tests:
           path: envs.simple-map-name-explicit[?(@.name=="CUSTOM_PREFIX_REPLICAS")]
           value:
             name: CUSTOM_PREFIX_REPLICAS
-            value: 3
+            value: "3"
       - equal:
           path: envs.simple-map-name-explicit[?(@.name=="CUSTOM_PREFIX_USE_CACHE")]
           value:
             name: CUSTOM_PREFIX_USE_CACHE
-            value: true
+            value: "true"
 
   - it: simple-list should include all keys and values from .Values.simpleList
     asserts:
@@ -165,15 +165,15 @@ tests:
             - name: UNQUOTED_STRING_VALUE
               value: "this is an unquoted String"
             - name: BOOL_VALUE
-              value: false
+              value: "false"
             - name: NUMBER_VALUE
-              value: 42
+              value: "42"
             - name: LOG_LEVEL
               value: "debug"
             - name: REPLICAS
-              value: 3
+              value: "3"
             - name: USE_CACHE
-              value: true
+              value: "true"
 
   - it: simple-list-name-implicit should prefix all keys from .Values.simpleList with SIMPLE_LIST
     asserts:
@@ -185,15 +185,15 @@ tests:
             - name: SIMPLE_LIST_UNQUOTED_STRING_VALUE
               value: "this is an unquoted String"
             - name: SIMPLE_LIST_BOOL_VALUE
-              value: false
+              value: "false"
             - name: SIMPLE_LIST_NUMBER_VALUE
-              value: 42
+              value: "42"
             - name: SIMPLE_LIST_LOG_LEVEL
               value: "debug"
             - name: SIMPLE_LIST_REPLICAS
-              value: 3
+              value: "3"
             - name: SIMPLE_LIST_USE_CACHE
-              value: true
+              value: "true"
 
   - it: simple-list-name-explicit should prefix all keys from .Values.simpleList with CUSTOM_PREFIX
     asserts:
@@ -205,15 +205,15 @@ tests:
             - name: CUSTOM_PREFIX_UNQUOTED_STRING_VALUE
               value: "this is an unquoted String"
             - name: CUSTOM_PREFIX_BOOL_VALUE
-              value: false
+              value: "false"
             - name: CUSTOM_PREFIX_NUMBER_VALUE
-              value: 42
+              value: "42"
             - name: CUSTOM_PREFIX_LOG_LEVEL
               value: "debug"
             - name: CUSTOM_PREFIX_REPLICAS
-              value: 3
+              value: "3"
             - name: CUSTOM_PREFIX_USE_CACHE
-              value: true
+              value: "true"
 
   - it: simple-valuefrom should include an unnamed valueFrom map
     asserts:
@@ -329,7 +329,7 @@ tests:
           path: envs.mixed-map[?(@.name=="BOOL_VALUE")]
           value:
             name: BOOL_VALUE
-            value: false
+            value: "false"
       - equal:
           path: envs.mixed-map[?(@.name=="REPLICAS")]
           value:
@@ -351,7 +351,7 @@ tests:
           path: envs.mixed-map[?(@.name=="NUMBER_VALUE")]
           value:
             name: NUMBER_VALUE
-            value: 42
+            value: "42"
 
   - it: mixed-list should include all scalars and valueFrom maps from .Values.mixedList
     asserts:
@@ -367,7 +367,7 @@ tests:
                   name: debug
                   optional: true
             - name: BOOL_VALUE
-              value: false
+              value: "false"
             - name: REPLICAS
               valueFrom:
                 fieldRef:
@@ -380,7 +380,8 @@ tests:
                   divisor: mixedListUseCacheDivisor
                   resource: mixedListUseCacheResource
             - name: NUMBER_VALUE
-              value: 42
+              value: "42"
+
 
   - it: edge-case-deep-sub-map should include all scalars and valueFrom maps from .Values.edgeCases.innerTargets.outer.innerMap
     asserts:
@@ -396,12 +397,12 @@ tests:
           path: envs.edge-case-deep-sub-map[?(@.name=="INNER_MAP_VALID_BOOL_VALUE")]
           value:
             name: INNER_MAP_VALID_BOOL_VALUE
-            value: false
+            value: "false"
       - equal:
           path: envs.edge-case-deep-sub-map[?(@.name=="INNER_MAP_VALID_NUMBER_VALUE")]
           value:
             name: INNER_MAP_VALID_NUMBER_VALUE
-            value: 42
+            value: "42"
 
   - it: edge-case-deep-sub-list should include all scalars and valueFrom maps from .Values.edgeCases.innerTargets.outer.innerList
     asserts:
@@ -411,9 +412,9 @@ tests:
             - name: INNER_LIST_VALID_STRING_VALUE
               value: "hello"
             - name: INNER_LIST_VALID_BOOL_VALUE
-              value: false
+              value: "false"
             - name: INNER_LIST_VALID_NUMBER_VALUE
-              value: 42
+              value: "42"
 
   - it: edge-case-ignore-subkeys-map should include only scalars and valueFrom maps from .Values.edgeCases.ignoreSubkeysMap
     asserts:
@@ -434,12 +435,12 @@ tests:
           path: envs.edge-case-ignore-subkeys-map[?(@.name=="IGNORE_SUBKEYS_MAP_VALID_BOOL_VALUE")]
           value:
             name: IGNORE_SUBKEYS_MAP_VALID_BOOL_VALUE
-            value: false
+            value: "false"
       - equal:
           path: envs.edge-case-ignore-subkeys-map[?(@.name=="IGNORE_SUBKEYS_MAP_VALID_NUMBER_VALUE")]
           value:
             name: IGNORE_SUBKEYS_MAP_VALID_NUMBER_VALUE
-            value: 42
+            value: "42"
       - equal:
           path: envs.edge-case-ignore-subkeys-map[?(@.name=="IGNORE_SUBKEYS_MAP_VALID_VALUE_FROM")]
           value:
@@ -459,9 +460,9 @@ tests:
             - name: IGNORE_SUBKEYS_LIST_VALID_UNQUOTED_STRING_VALUE
               value: "this is an unquoted String"
             - name: IGNORE_SUBKEYS_LIST_VALID_BOOL_VALUE
-              value: false
+              value: "false"
             - name: IGNORE_SUBKEYS_LIST_VALID_NUMBER_VALUE
-              value: 42
+              value: "42"
             - name: IGNORE_SUBKEYS_LIST_VALID_VALUE_FROM
               valueFrom:
                 secretKeyRef:
